// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput should render 1`] = `
<SearchInput
  filterText="Test"
  onFilterTextChange={[Function]}
  t={[Function]}
/>
`;

exports[`SearchInput should render and space search 1`] = `
<SearchInput
  filterText="Test"
  onFilterTextChange={[Function]}
  spaceSearch={true}
  t={[Function]}
/>
`;
